@@ -31,9 +31,9 @@ print_error (void)
   if (errnum > ERR_NONE && errnum < MAX_ERR_NUM)
 #ifndef STAGE1_5
     /* printf("\7\n %s\n", err_list[errnum]); */
-    printf ("\nError: %s\n", err_list[errnum]);
+    printf ("\nError %u: %s\n", errnum, err_list[errnum]);
 #else /* STAGE1_5 */
-    printf ("Error: %u\n", errnum);
+    printf ("Error %u\n", errnum);
 #endif /* STAGE1_5 */
 }
 
